[gd_scene format=3 uid="uid://df2jq26lhpkp3"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/sprouty_dialogs/editor/theme/sprouty_dialogs_theme.tres" id="1_8pr20"]
[ext_resource type="Script" uid="uid://c8m18yh4pukpg" path="res://addons/sprouty_dialogs/event_nodes/scripts/call_method_node.gd" id="2_kwnl7"]
[ext_resource type="PackedScene" uid="uid://bet0ba0xkipef" path="res://addons/sprouty_dialogs/editor/components/array_field.tscn" id="3_8pr20"]
[ext_resource type="Texture2D" uid="uid://b4vpwnn50abno" path="res://addons/sprouty_dialogs/editor/icons/event_nodes/callable.svg" id="3_xbrbu"]
[ext_resource type="PackedScene" uid="uid://drlmb1kt08wlv" path="res://addons/sprouty_dialogs/editor/components/combo_box.tscn" id="4_34kpq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34kpq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.6525743, 0.13914663, 0.99950343, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yx6b"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(0.6525743, 0.13914663, 0.99950343, 1)
border_color = Color(0.325, 0.325, 0.325, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="CallMethodNode" type="GraphNode" unique_id=386465807]
custom_minimum_size = Vector2(200, 0)
offset_right = 235.0
offset_bottom = 203.0
theme = ExtResource("1_8pr20")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_34kpq")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_8yx6b")
resizable = true
title = "Call Method Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("2_kwnl7")
node_color = Color(0.6525743, 0.13914663, 0.99950343, 1)
node_icon = ExtResource("3_xbrbu")
node_list_index = 5

[node name="GridContainer" type="GridContainer" parent="." unique_id=1517490971]
layout_mode = 2
columns = 2

[node name="AutoloadLabel" type="Label" parent="GridContainer" unique_id=1859077779]
layout_mode = 2
text = "Autoload"

[node name="AutoloadsDropdown" type="OptionButton" parent="GridContainer" unique_id=998070977]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "(No one)"
popup/item_0/icon = ExtResource("3_xbrbu")
popup/item_0/id = 0
popup/item_1/text = "SproutyDialogs"
popup/item_1/icon = ExtResource("3_xbrbu")
popup/item_1/id = 1

[node name="MethodLabel" type="Label" parent="GridContainer" unique_id=453655822]
layout_mode = 2
text = "Method"

[node name="MethodComboBox" parent="GridContainer" unique_id=622840650 instance=ExtResource("4_34kpq")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Method name..."
editable = false
_placeholder_text = "Method name..."

[node name="DropdownPopup" parent="GridContainer/MethodComboBox" index="0"]
max_size = Vector2i(16384, 300)

[node name="---" type="HSeparator" parent="." unique_id=733726973]
layout_mode = 2

[node name="ParametersLabel" type="Label" parent="." unique_id=510998175]
layout_mode = 2
text = "Parameters"

[node name="ParametersField" parent="." unique_id=892279146 instance=ExtResource("3_8pr20")]
unique_name_in_owner = true
layout_mode = 2
parameters_array = true

[editable path="GridContainer/MethodComboBox"]
